--- a/src/main/resources/templates/Item/item_detail.html
+++ b/src/main/resources/templates/Item/item_detail.html
@@ -1,46 +1,84 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Univ Store - 상품 페이지</title>
-    <link rel="stylesheet" href="css/item_detail.css">
-    <!-- Bootstrap CSS 추가 -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <title>Title</title>
+  <link rel="stylesheet" type="text/css" href="css/item_detail.css" />
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!------ Include the above in your HEAD tag ---------->
+
 </head>
 <body>
 <div th:replace="fragments/header :: headerFragment"></div>
 <div th:include="fragments/nav.html"></div>
-<main class="product-page">
-    <div class="container">
-        <div class="row">
-            <div class="col-6">
-                <div class="product-image">
-                    <img src="images/hero-bg.jpg" alt="Product Image" style="max-width: 100%;">
-                </div>
-            </div>
-            <div class="col-6">
-                <div class="product-info">
-                    <h2 class="product-title">상품명</h2>
-                    <p class="product-description">상품코드</p>
-                    <p class="product-price">가격</p>
-                    <div class="quantity">
-                        <label for="quantity">수량:</label>
-                        <input type="number" id="quantity" name="quantity" min="1" value="1">
-                    </div>
-                    <button class="add-to-cart-btn">장바구니</button>
-                    <button class="add-to-cart-btn">구매하기</button>
-                </div>
-            </div>
-        </div>
+
+<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"><div class="pd-wrap">
+  <div class="container">
+    <div class="heading-section">
     </div>
-</main>
+    <div class="row" th:each="item : ${items}">
+      <div class="col-md-6">
+        <div id="slider" class="owl-carousel product-slider">
+          <div class="item">
+            <img th:with="fileName=${#strings.substringAfter(item.img, '_')}" th:src="@{'/images/' + ${fileName}}" />
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="product-dtl">
+          <div class="product-info">
+            <div class="product-name" th:text="${item.name}">Variable Product</div>
+            <div class="product-price-discount" th:text="${#numbers.formatInteger(item.price, 0, 'COMMA') + ' 원'}"><span>$39.00</span>
+<!--              <span class="line-through">$29.00</span>-->
+            </div>
+          </div>
+          <p th:text="${item.detail}"></p>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="product-option" for="size">Size</div>
+              <div class="product-result">Size</div>
+            </div>
+            <div class="col-md-6">
+              <div class="product-option" for="size">Color</div>
+              <div class="product-result">Size</div>
+            </div>
+          </div>
+          <div class="product-count">
+            <div class="product-option">Quantity</div>
+            <form action="#" class="display-flex">
+              <div class="qtyminus">-</div>
+              <input type="text" name="quantity" value="1" class="qty">
+              <div class="qtyplus">+</div>
+            </form>
+            <a href="#" class="round-black-btn">Add to Cart</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="	sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 <div th:replace="fragments/footer :: footerFragment"></div>
 
-<script src="script.js"></script>
-<!-- Bootstrap JS 추가 -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
+<script src="js/item_detail.js"></script>
+<script th:inline="javascript">
+
+  $(document).ready(function(){
+    var errorMessage = [[${errorMessage}]];
+    if(errorMessage != null){
+      alert(errorMessage);
+    }
+  });
+</script>
 </body>
 </html>
