--- a/src/main/resources/templates/my/orderList.html
+++ b/src/main/resources/templates/my/orderList.html
@@ -25,10 +25,12 @@
           <th>주문상태</th>
         </tr>
         </thead>
-        <tbody th:each="order : ${orders}">
+        <tbody th:each="order, state : ${orders}">
         <tr class="cart-table-content">
           <td class="cart-table-image-info"><img th:with="fileName=${#strings.substringAfter(order.PImg, '_')}" th:src="@{'/images/' + ${fileName}}" alt=""></td>
-          <td class="bold-text red-text cart-table-desktop"><span class="bold-text" th:text="${order.PName}">삼성 통돌이</span></td>
+          <td class="bold-text red-text cart-table-desktop">
+            <span class="bold-text" th:text="${order.PName}">삼성 통돌이</span><span th:if="${num.get(state.index) > 0}"> 외 <span th:text="${num.get(state.index)}"></span></span>
+          </td>
           <td class="cart-table-desktop" th:text="${order.odate}"></td>
           <td class="cart-table-desktop" th:text="${#numbers.formatInteger(order.total, 0, 'COMMA') + ' 원'}"></td>
           <td class="cart-delete" th:text="${order.status.getName()}">배송완료</td>
