--- a/src/main/resources/templates/my/memberEdit.html
+++ b/src/main/resources/templates/my/memberEdit.html
@@ -13,20 +13,17 @@
     <h1>정보 수정</h1>
   </div>
 <div class="container">
-  <form action="#" method="post" enctype="multipart/form-data">
+  <form action="/member/memEdit" method="post" enctype="multipart/form-data">
     <div class="form-row">
       <div class="form-group col-6">
         <label for="name">이름</label>
-        <input type="text" id="name" name="name" required />
+        <input type="hidden" th:value="${member.mseq}" id="mseq" name="mseq" required />
+        <input type="text" th:value="${member.name}" id="name" name="name" required />
       </div>
       <div class="form-group col-6">
         <label for="name">전화번호</label>
-        <input type="text" required />
+        <input type="text" id="phone" name="phone" th:value="${member.phone}" required />
       </div>
-    </div>
-    <div class="form-group">
-      <label for="name">비밀번호</label>
-      <input type="password" required />
     </div>
 
     <div class="form-row">
